force-app/main/default/objects/Child_Family_Match_Matrix__c/Child_Family_Match_Matrix__c.object-meta.xml
<CustomObject>
    <label>Child Family Match Matrix</label>
    <nameField>
        <displayFormat>CFMMN-{00000}</displayFormat>
        <label>Child Family Match Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Family Match Matricies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>