force-app/main/default/objects/Child_Family_Match_Matrix__c/fields/Calculated_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Date__c</fullName>
    <label>Calculated Date</label>
    <type>DateTime</type>
</CustomField>