force-app/main/default/objects/Child_Family_Match_Matrix__c/fields/Child__c.field-meta.xml
<CustomField>
    <fullName>Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Child Family Match Matricies</relationshipLabel>
    <relationshipName>Child_Family_Match_Matricies</relationshipName>
    <type>Lookup</type>
</CustomField>