force-app/main/default/objects/Child_Family_Match_Matrix__c/fields/Distance_Miles__c.field-meta.xml
<CustomField>
    <fullName>Distance_Miles__c</fullName>
    <label>Distance Miles</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>