force-app/main/default/objects/Child_Family_Match_Matrix__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Family Match Matricies</relationshipLabel>
    <relationshipName>Child_Family_Match_Matricies</relationshipName>
    <type>Lookup</type>
</CustomField>