force-app/main/default/objects/Child_Family_Match_Matrix__c/fields/Hard_Constraints_Met__c.field-meta.xml
<CustomField>
    <fullName>Hard_Constraints_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Constraints Met</label>
    <type>Checkbox</type>
</CustomField>