force-app/main/default/objects/Child_Family_Match_Matrix__c/fields/High_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Score__c</fullName>
    <label>High Priority Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>