force-app/main/default/objects/Child_Family_Match_Matrix__c/fields/Match_Rank__c.field-meta.xml
<CustomField>
    <fullName>Match_Rank__c</fullName>
    <label>Match Rank</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>